Enhanced CORS configuration for better cross-origin support
- Added CORS_ALLOW_CREDENTIALS for authenticated requests
- Added CORS_ALLOWED_HEADERS for comprehensive header support
- Added CSRF_TRUSTED_ORIGINS for Django CSRF protection
- Updated .env.cpanel with separate CSRF_TRUSTED_ORIGINS setting
- Maintains security with CORS_ALLOW_ALL_ORIGINS = False
- Supports both development (localhost) and production (HTTPS) origins

--- a/.env.cpanel
+++ b/.env.cpanel
@@ -28,6 +28,9 @@ TIME_ZONE=Africa/Nairobi
 # CORS Settings
 CORS_ALLOWED_ORIGINS=https://pos.navipos.co.ke,https://www.pos.navipos.co.ke
 
+# CSRF Trusted Origins (same as CORS for most cases)
+CSRF_TRUSTED_ORIGINS=https://pos.navipos.co.ke,https://www.pos.navipos.co.ke
+
 # Email Configuration
 EMAIL_HOST=mail.navipos.co.ke
 EMAIL_PORT=587
